--- a/index-youtube.html
+++ b/index-youtube.html
@@ -57,8 +57,8 @@
 
 		<!-- *** / Menu icon *** -->
 
-		<!-- YouTube link -->
-		<a id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/1CdVBt7Hn-8',containment:'body',autoPlay:true, mute:false, startAt:0, stopAt:0, opacity:1}"></a>
+		<!-- YouTube link http://youtu.be/1CdVBt7Hn-8 -->
+		<a id="bgndVideo" class="player" data-property="{videoURL:'https://player.vimeo.com/video/294614669',containment:'body',autoPlay:true, mute:false, startAt:0, stopAt:0, opacity:1}"></a>
 
 		<div class="custom-overlay"></div>
 
