--- a/index-youtube.html
+++ b/index-youtube.html
@@ -58,7 +58,7 @@
 		<!-- *** / Menu icon *** -->
 
 		<!-- YouTube link http://youtu.be/1CdVBt7Hn-8 -->
-		<a id="bgndVideo" class="player" data-property="{videoURL:'https://player.vimeo.com/video/294614669',containment:'body',autoPlay:true, mute:false, startAt:0, stopAt:0, opacity:1}"></a>
+		<a id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/8bjeDL_wAsg',containment:'body',autoPlay:true, mute:false, startAt:0, stopAt:0, opacity:1}"></a>
 
 		<div class="custom-overlay"></div>
 
