--- a/index-youtube.html
+++ b/index-youtube.html
@@ -659,8 +659,8 @@
 
 								<span class="separator"></span>
 
-		                		<p class="subtitle">We are here to help you from <strong>Tuesday through Saturday</strong>, from 9:00 AM to 10:00 PM.<br>
-									Contact us via <strong>Phone : </strong><a href="tel:66-1254-611" class="phone-mail-link">(+33) 66-1254-611</a> or <strong>Email</strong> : <a href="mailto:dstny@example.com" class="phone-mail-link">dstny@example.com</a></p>
+		                		<p class="subtitle">We are here to help you from <strong>Monday through Saturday</strong>, from 09:00 to 22:00.<br>
+									Contact us via <strong>Phone : </strong><a href="tel:+0036303960396" class="phone-mail-link">(+36) 30-396-0-396</a> or <strong>Email</strong> : <a href="mailto:hungary@hado.hu" class="phone-mail-link">hungary@hado.hu/a></p>
 
 		                		<div class="row">
 
