--- a/index-youtube.html
+++ b/index-youtube.html
@@ -726,7 +726,7 @@
 
 		               			</div>
 							
-								<p class="copyright">© DSTNY - Made for Visionary People</p>
+								<p class="copyright">© HADO HUNGARY - Made for Hungary</p>
 
 							</div>	
 
