--- a/index-youtube.html
+++ b/index-youtube.html
@@ -610,7 +610,7 @@
 
 											<!-- Dribbble -->
 											<li>
-												<a href="#"><i class="fa fa-dribbble"></i></a>
+												<a href="#"><i class="fa fa-instagram"></i></a>
 											</li>
 
 											<!-- Linkedin -->
@@ -622,7 +622,7 @@
 
 										<img src="img/member-2.jpg" alt="Member 2" class="img-responsive team-member" />
 
-										<h3>Julien PALMER <small>Designer</small></h3>
+										<h3>pal KOVALCSIK <small>Designer</small></h3>
 
 										<p>Lorem ipsum Do dolor commodo occaecat sit pariatur nisi sit laboris officia exercitation officia laboris ex ullamco nulla do in elit.</p>
 
