--- a/index-youtube.html
+++ b/index-youtube.html
@@ -608,16 +608,30 @@
 												<a href="#"><i class="fa fa-twitter"></i></a>
 											</li>
 
-											<!-- Dribbble -->
+											<!-- Instagram -->
 											<li>
 												<a href="#"><i class="fa fa-instagram"></i></a>
 											</li>
 
-											<!-- Linkedin -->
+											<!-- Youtube -->
+											<li>
+												<a href="#"><i class="fa fa-youtube"></i></a>
+											</li>
+
+											<!-- Soundcloud -->
+											<li>
+												<a href="#"><i class="fa fa-soundcloud"></i></a>
+											</li>
+											
+											<!-- Medium -->											<!-- Soundcloud -->
+											<li>
+												<a href="#"><i class="fa fa-medium"></i></a>
+											</li>
+											
+											<!-- Linkedin -->												<!-- Medium -->											<!-- Soundcloud -->
 											<li>
 												<a href="#"><i class="fa fa-linkedin"></i></a>
 											</li>
-
 										</ul>
 
 										<img src="img/member-2.jpg" alt="Member 2" class="img-responsive team-member" />
