--- a/index-youtube.html
+++ b/index-youtube.html
@@ -68,7 +68,7 @@
 
 			<!-- *** LOGO *** -->
         	<!-- Line 1773 in js/jquery.fullpage.js is the place to select the anchor scrolling to the section of your choice -->
-        	<img src="img/logo.png" alt="Our company logo" class="brand-logo" />
+        	<!--  <img src="img/logo.png" alt="Our company logo" class="brand-logo" /> -->
 
 			<div class="content-inside">
 
