--- a/index-youtube.html
+++ b/index-youtube.html
@@ -636,7 +636,7 @@
 
 										<img src="img/member-2.jpg" alt="Member 2" class="img-responsive team-member" />
 
-										<h3>pal KOVALCSIK <small>Designer</small></h3>
+										<h3>pal KOVALCSIK <small>Medical Toursim Executive Manager</small></h3>
 
 										<p>Lorem ipsum Do dolor commodo occaecat sit pariatur nisi sit laboris officia exercitation officia laboris ex ullamco nulla do in elit.</p>
 
