--- a/index-youtube.html
+++ b/index-youtube.html
@@ -600,43 +600,43 @@
 
 											<!-- Facebook -->
 											<li>
-												<a href="#"><i class="fa fa-facebook"></i></a>
+												<a href="https://facebook.com/palkovalcsik" target="_blank"><i class="fa fa-facebook"></i></a>
 											</li>
 
 											<!-- Twitter -->
 											<li>
-												<a href="#"><i class="fa fa-twitter"></i></a>
+												<a href="https://twitter.com/palkovalcsik"><i class="fa fa-twitter" target="_blank"></i></a>
 											</li>
 
 											<!-- Instagram -->
 											<li>
-												<a href="#"><i class="fa fa-instagram"></i></a>
+												<a href="https://www.instagram.com/palkovalcsik" target="_blank"><i class="fa fa-instagram"></i></a>
 											</li>
 
 											<!-- Youtube -->
 											<li>
-												<a href="#"><i class="fa fa-youtube"></i></a>
+												<a href="https://www.youtube.com/channel/UCSWfsAOVIAS7qrxbB48O9Eg" target="_blank"><i class="fa fa-youtube"></i></a>
 											</li>
 
 											<!-- Soundcloud -->
 											<li>
-												<a href="#"><i class="fa fa-soundcloud"></i></a>
+												<a href="https://soundcloud.com/palkovalcsik" target="_blank"><i class="fa fa-soundcloud"></i></a>
 											</li>
 											
 											<!-- Medium -->											<!-- Soundcloud -->
 											<li>
-												<a href="#"><i class="fa fa-medium"></i></a>
+												<a href="https://medium.com/@palkovalcsik" target="_blank"><i class="fa fa-medium"></i></a>
 											</li>
 											
 											<!-- Linkedin -->												<!-- Medium -->											<!-- Soundcloud -->
 											<li>
-												<a href="#"><i class="fa fa-linkedin"></i></a>
+												<a href="https://www.linkedin.com/in/palkovalcsik/" target="_blank"><i class="fa fa-linkedin"></i></a>
 											</li>
 										</ul>
 
 										<img src="img/member-2.jpg" alt="Member 2" class="img-responsive team-member" />
 
-										<h3>pal KOVALCSIK <small>Medical Toursim Executive Manager</small></h3>
+										<h3>pal KOVALCSIK <small>Medical Toursim Executive</small></h3>
 
 										<p>Lorem ipsum Do dolor commodo occaecat sit pariatur nisi sit laboris officia exercitation officia laboris ex ullamco nulla do in elit.</p>
 
