--- a/index-youtube.html
+++ b/index-youtube.html
@@ -137,7 +137,7 @@
 
 		                </form>
 
-						<p class="spam-news"></ br><i class="fa fa-lock"></i> We hate spam just as much as you do. Your email will not be shared.</p>
+						<p></p><p class="spam-news"><i class="fa fa-lock"></i> We hate spam just as much as you do. Your email will not be shared.</p>
 
 	    			</div>
 	    			<!-- *** /. Newsletter Form *** -->
