--- a/index-youtube.html
+++ b/index-youtube.html
@@ -811,5 +811,13 @@
 		<script src="js/main-youtube.js"></script>
 
 	</body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140676795-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-140676795-1');
+</script>
 </html>
