--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 
 											<!-- Twitter -->
 											<li>
-												<a href="https://twitter.com/palkovalcsik"><i class="fa fa-twitter" target="_blank"></i></a>
+												<a href="https://twitter.com/palkovalcsik" target="_blank"><i class="fa fa-twitter" target="_blank"></i></a>
 											</li>
 
 											<!-- Instagram -->
