--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
 		               			</div>
 							
-								<p class="copyright">© HADO HUNGARY - Made for Hungary</p>
+								<p class="copyright">© HADO HUNGARY - Made with <span style="color: #e53030;">&#9829;</span> for Hungary</p>
 
 							</div>	
 
