--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
 			                <!-- 1 -->
 			                <figure class="col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-			                    <a href="img/gallery-1.jpg" class="gallery-link small" data-image="img/gallery-1.jpg" itemprop="contentUrl" data-size="1920x1280">
+			                    <a href="img/crystal/1.jpg" class="gallery-link small" data-image="img/crystal/1.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-			                        <img src="img/gallery-1.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+			                        <img src="img/crystal/1.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 			                    </a>
 
@@ -427,9 +427,9 @@
 			                <!-- 2 -->
 			                <figure class="col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-			                    <a href="img/gallery-2.jpg" class="gallery-link small" data-image="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280">
+			                    <a href="img/crystal/2.jpg" class="gallery-link small" data-image="img/crystal/2.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-			                        <img src="img/gallery-2.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+			                        <img src="img/crystal/2.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 			                    </a>
 
@@ -450,9 +450,9 @@
 			                <!-- 3 -->
 			                <figure class="col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-			                    <a href="img/gallery-3.jpg" class="gallery-link small" data-image="img/gallery-3.jpg" itemprop="contentUrl" data-size="1920x1280">
+			                    <a href="img/crystal/3.jpg" class="gallery-link small" data-image="img/crystal/3.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-			                        <img src="img/gallery-3.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+			                        <img src="img/crystal/3.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 			                    </a>
 
@@ -473,9 +473,9 @@
 			                <!-- 4 -->
 			                <figure class="col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-			                    <a href="img/gallery-4.jpg" class="gallery-link small" data-image="img/gallery-4.jpg" itemprop="contentUrl" data-size="1920x1280">
+			                    <a href="img/crystal/4.jpg" class="gallery-link small" data-image="img/crystal/4.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-			                        <img src="img/gallery-4.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+			                        <img src="img/crystal/4.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 			                    </a>
 
@@ -496,9 +496,9 @@
 			                <!-- 5 -->
 			                <figure class="col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-			                    <a href="img/gallery-5.jpg" class="gallery-link small" data-image="img/gallery-5.jpg" itemprop="contentUrl" data-size="1920x1280">
+			                    <a href="img/crystal/5.jpg" class="gallery-link small" data-image="img/crystal/5.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-			                        <img src="img/gallery-5.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+			                        <img src="img/crystal/5.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 			                    </a>
 
@@ -519,9 +519,9 @@
 			                <!-- 6 -->
 			                <figure class="col-xs-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-			                    <a href="img/gallery-6.jpg" class="gallery-link small" data-image="img/gallery-6.jpg" itemprop="contentUrl" data-size="1920x1280">
+			                    <a href="img/crystal/6.jpg" class="gallery-link small" data-image="img/crystal/6.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-			                        <img src="img/gallery-6.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+			                        <img src="img/crystal/6.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 			                    </a>
 
