--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 											</li>
 										</ul>
 
-										<img src="img/member-2.jpg" alt="Member 2" class="img-responsive team-member" />
+										<img src="img/member-2.png" alt="Member 2" class="img-responsive team-member" />
 
 										<h3>pal KOVALCSIK <small>Medical Toursim Executive</small></h3>
 
