--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 				<div class="text">
 
-					<p>Perfect and awesome template to present your future product or service.<br>
-						Hooking audience attention is all in the opener.
+					<p>Perfect and awesome wellness services to promote your awsome hotel or hospitality services.<br>
+						We help help companies to access new markets, put your business upto a new level by using ISO quality control.
 					</p>
 
 					<br>
