promo text update

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 				<div class="text">
 
-					<p>Perfect and awesome wellness services to promote your awsome hotel or hospitality services.<br>
-						We help help companies to access new markets, put your business upto a new level by using ISO quality control.
+					<p>The market is full, but hotel promotion easy with us for making happiness.<br>
+						Hotel & medical spa operation, ISO quality control for the Y generation.
 					</p>
 
 					<br>
