--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 				<div class="text">
 
-					<p>The market is full, but hotel promotion easy with us for making happiness.<br>
-						Hotel & medical spa operation, ISO quality control for the Y generation.
+					<p>Promote new investment with message of water for free happiness.<br>
+						Medical spa & Hotel operation, ISO quality control for the Y generation.
 					</p>
 
 					<br>
