--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 				<div class="text">
 
-					<p>Promote new investment with message of water for free happiness.<br>
+					<p>You can promote now with the new secret of water for free happiness.<br>
 						Medical spa & Hotel operation, ISO quality control for the Y generation.
 					</p>
 
