--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="text">
 
 					<p>Now promote yourself with the new secret of water for free!<br>
-						Medical spa & Hotel operation, ISO quality control for the Y generation.
+						Medical spa operation & ISO quality control for the Y generation.
 					</p>
 
 					<br>
